# Hydra

./: .gitattributes  .gitignore  README.md  create  error-log.txt  kill  kill-new  launch  launch-new  pyproject.toml  report_bug.py  stop-generic-trainjob  update-volumes
cosmos-predict2/libero/: USAGE.md  delete-job.sh  describe.sh  job-fullrun.yaml  main.sh  start.sh  trainjob.yaml  volumeclaims.yaml
docs/: CLUSTER.md  DEPLOYMENTS.md  DEPLPOY.md  QUICKSTART.md  SCRIPTS.md
hello-world/: hello-world.sh  job.yaml
humanoid/: run.sh  s3-pvc.yaml  test_cluster_job.yaml
humanoid/example/: run.sh  trainjob.yaml  volumeclaims.yaml  volumes.yaml
humanoid/finetune/: finetune_g1_job.yaml  run.sh  volumeclaims.yaml  volumes.yaml
inference/: deployment.yaml
launch.d/: generic.yaml  pod-bootstrap.sh  volumeclaims.yaml
launch.d/instance_types/: a100-80.yaml  a100.yaml  gpul.yaml  gpum.yaml  gpus.yaml
launch.d/templates/: deployment.yaml  trainjob.yaml
lib/: __init__.py  instancetypes.yaml  report_bug.py  update_volumes.sh
robot-learning/: .gitkeep  s3-mount.yaml  upload-checkpoint-to-s3-worker.sh  upload-checkpoint-to-s3.sh
robot-learning/act-inference/: deploy.yaml  entrypoint.sh  pyproject.toml  server.py
robot-learning/act-new/: deploy.yaml  entrypoint.sh  (+1 more)
robot-learning/act-with-embedder/: deploy.yaml  embedder.sh  pyproject.toml  server_embedder.py  train.sh
setup/: upload-dataset.sh
simulation/: job.yaml
training/: act.yaml  checkpoints.yaml  data-pv.yaml  data.yaml  gp3.yaml  job.yaml  kustomization.yaml  run-sh-configmap.yaml  run.sh
(+39 files in other folders)
