[project]
name = "act-inference"
version = "0.1.0"
description = "FastAPI inference server for ACT policies (used by ./launch-new)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "lerobot",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
]
